--- a/THANKS
+++ b/THANKS
@@ -10,6 +10,7 @@ borrowed from Libgcrypt.
 Bug reports, patches and/or suggestions were also received from:
 
 Lars Engebretsen
+Marc Mutz
 Andorz Nilsson
 Sergey Poznyakoff
 
