--- a/AUTHORS
+++ b/AUTHORS
@@ -6,38 +6,38 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented GNU SASL.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Comment: This key is used to sign GNU SASL releases.
+Comment: This 0xB565716F key is used to sign releases of Libidn.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
 T5rhTFDfDcT9SO0eIlfKOraSRnVEHyDDH2PAgJFxyneFELcmLUQ66D+m8z+ziGro
 6bcDSBBDMRkHIX6/kH/vnevjqivIld+j8WTcVX+SArcKyzgQ58uMTrfQdLqzh6D9
 sE/838+ZPZkabmKKWMVWccoaUbWGYOcNwO0ABim0IVNpbW9uIEpvc2Vmc3NvbiA8
-amFzQGV4dHVuZG8uY29tPojYBBMBAgAiBQI81QcrAhsDBQkB4TOABAsHAwIDFQID
-AxYCAQIeAQIXgAAKCRDtoh6UtWVxb4jyBP0arTNzMTakDhO8BCE03d0iru6sCFJ2
-qQeh4UAFXy8KZ5ybtWJxFT/Q7xn0uXKujJ99cXhuy7icDR13wWkRKG20IjKiNv9y
-zQaNR36+m58mjZu1UDnGVm2PT9bELYmKTVoumi44QWgU5lgq5KZfWhsA5BQEqS5t
-p9k4CBBg36JCwjYxHfnWxymA1hSyMKPmgmPm6aFd+Lv9d3h5oTVs9TBOiEYEExEC
+amFzQGV4dHVuZG8uY29tPojYBBMBAgAiAhsDBAsHAwIDFQIDAxYCAQIeAQIXgAUC
+P6QrUQUJA7xyJgAKCRDtoh6UtWVxbwueBP4uh9ZEOuSjt2n5OpfuAablsrRzhlgP
+fluBMfjHNynEFsGjn81l81TCqStRln7wDUj95ZufSi3YvoYSFG1jffGMk/k2trgI
+NtT3kxaGkfns6dykBuV7Ki2wWqdJkTe1ibyai+RCqt+J1ldSUuHdfQZ5wALPJQRb
+4Hqi7M29azFHcfxbMLf3yGYyBuKC7eBVNVaR58UTFK6r0CX3T7eGuk8biEYEExEC
 AAYFAj1Y8r8ACgkQV5Mp08AbKiIX9wCfR2rMiXdKzZB95acA5YSQ4MLQyygAn1Nv
 7M36SAofR/73WjqlPpVAQ+fRiEwEExECAAwFAj1esHUFgwFXijYACgkQvLvElXGK
 klYZnQCeOXIzmEoZ5yOVNygphYmUwON/S8IAn32gWDyaTMpqyDcJEQeLdjcW7boS
-tCVTaW1vbiBKb3NlZnNzb24gPHNpbW9uQGpvc2Vmc3Nvbi5vcmc+iNgEEwECACIF
-Aj0lzz0CGwMFCQHhM4AECwcDAgMVAgMDFgIBAh4BAheAAAoJEO2iHpS1ZXFvt3ME
-/ijwFJCSNoY1AfCEm3AX6vRKUbjiy0MdemsqajXF6awcbIaeCwk3wVr9JOs1usu2
-/AQQDvz0sf/hEv6c3sMTYspD6+QzrRMUVbLm0fp+pRZKyaW1tO+/JIoOl8qsOwod
-kXPQ7CYFvSZhhkxdUwVOa6UtL6kOdCjQAy7DDQTzdcC/GxHQNVUNF5KcBWC7LMN6
-iAt0dAFEMaQz4t37CHq+DCyIRgQTEQIABgUCPVjywgAKCRBXkynTwBsqImY3AKCS
+tCVTaW1vbiBKb3NlZnNzb24gPHNpbW9uQGpvc2Vmc3Nvbi5vcmc+iNgEEwECACIC
+GwMECwcDAgMVAgMDFgIBAh4BAheABQI/pCtUBQkDvHImAAoJEO2iHpS1ZXFvPREE
+/j3fX+cLxCCZNTjMhThGFujiT7ty4x1jVc91J6QOA+Jp+78NIIeyg3JTeR3WIv7/
+WFNzLKJXJEEcga+0ViPjoLfvGsHMAnwXqPYAxu1cDY4jId0bCYgoVlnfF9gwOWxe
+btotLpCiuXGL/168zEAXWJpPg6r2MfPhAKUJ9G8q52OOWJW3cObxoZ2gyXjuWOFt
+ygZ1vUAqP/8UGeZNdajHD5uIRgQTEQIABgUCPVjywgAKCRBXkynTwBsqImY3AKCS
 COO5LlNxmritUFY1i7VXBCUlZgCgll/6kE0G/NP3E6AdyzVwAzBPgUeITAQTEQIA
 DAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqSVleXAJ9NZKUvb/erk53fMFUwpUeClOjh
 qwCcC3Du9UQjCn2k+7LWgqNMH+huqW24qwQ81Qd7AQUA2PTaoT8RNkFDlX7UCOB9
 vaRFxrX+dN7l6QO+O0Mg7dVdjItEnaaYkJ+r4LXecI47HogsUGExRdDYGT0Dq7aZ
 8GkC4UKPXc3q2KWQ3ib3wj3qnCGm3IX/I249ydYLAzQyWqMW09wLB5vxhPi4yjet
 4FTGWmtYUlGzDb7+6VZilYRTty0vhFF4cVXlO2R+vgPxFMvUc7o8WGDnQ3iyWAiz
-kQAGKYjFBBgBAgAPBQI81Qd7AhsMBQkB4TOAAAoJEO2iHpS1ZXFvl2cE/3sB4hHG
-nvBI91WwHvrTJG29pgqXbZNa2FVzbwDju972kVdYT1FfVndE/bstRX3BT3/GNHXB
-gSXRNmZkVO7tQoqNReycUTTdExBeCsDO2p2QiQ5ijuD1HbOC2p0cptvKeNxsfKzw
-KP6U1CalYp6AV6DynqNqW4gpkIlHr+ZRM8/q8YfJblwCiYL8Bfh/jI/s2gI4lQim
-HGlBrIkG2vSgie4=
-=CC7X
+kQAGKYjFBBgBAgAPAhsMBQI/pCt8BQkDvHIBAAoJEO2iHpS1ZXFvEeIE/ixQWhAC
+pnKjQZeTA7zcshH683NU/bBAjbOq7lJ51aWMXOdXExGJsBD0fyPtRJywMtSB4vrM
+F1WjKZlA0jBOxzxWaWpLvMwdwgkSiql8KTNActxIoijtu0e5GI3V+55Z+Cv/jsPD
+lzeYiob0cO6u/2todt6XVTyCIFKWjf6/5i/LdhXlw7J9gzrCwm28ITC4is3voTNh
+Uceqods6zDrk0qo=
+=1RsN
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
