--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented GNU SASL.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Comment: This 0xB565716F key is used to sign releases of Libidn.
+Comment: This 0xB565716F key is used to sign releases of gsasl.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
 T5rhTFDfDcT9SO0eIlfKOraSRnVEHyDDH2PAgJFxyneFELcmLUQ66D+m8z+ziGro
