--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ GSASL_CRYPTO_ERROR: ADD, alias for GSASL_LIBGCRYPT_ERROR.
 gsasl_randomize: ADD.
 gsasl_md5: ADD.
 gsasl_hmac_md5: ADD.
+gsasl_hexdump: REMOVED.
 
 * Changes in 0.0.8 (released 2003-10-11)
 
