--- a/THANKS
+++ b/THANKS
@@ -13,6 +13,7 @@ Lars Engebretsen
 Marc Mutz
 Andorz Nilsson
 Sergey Poznyakoff
+Peter Prohaska
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
