--- a/THANKS
+++ b/THANKS
@@ -2,8 +2,8 @@ GNU SASL THANKS -- Acknowledgements.
 Copyright (C) 2002, 2003 Simon Josefsson
 See the end for copying conditions.
 
-Libgsasl uses libntlm by Grant Edwards maintained by Simon Josefsson,
-libgssapi by MIT/Heimdal, libgcrypt by Werner Koch, GSS, Libidn, and
+Libgsasl uses libntlm by Grant Edwards maintained by Simon Josefsson;
+libgssapi by MIT/Heimdal; libgcrypt by Werner Koch; GSS, Libidn, and
 Shishi by Simon Josefsson.  Templates for makefiles, manuals etc was
 borrowed from Libgcrypt.
 
