--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Changes in 0.0.9 (unreleased)
 
+** DocBook manuals in XML, PDF, PostScript, ASCII and HTML formats included.
+
 ** Token parser in DIGEST-MD5 fixed, improve interoperability of DIGEST-MD5.
 
 ** Libgcrypt 1.1.42 or later is used if available.
