--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -164,6 +164,8 @@ language.
 
 @item It's portable
 It should work on all Unix like operating systems, including Windows.
+The library itself should be portable to any C89 system, not even
+POSIX is required.
 
 @end table
 
