--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,8 @@ MD5 and HMAC-MD5 is needed, making libgcrypt rather overkill.
 ** API and ABI modifications.
 GSASL_CRYPTO_ERROR: ADD, alias for GSASL_LIBGCRYPT_ERROR.
 GSASL_LIBGCRYPT_ERROR: DEPRECATED.  Will be removed in the future.
+GSASL_KERBEROS_V5_INTERNAL_ERROR: ADD, alias for GSASL_SHISHI_ERROR.
+GSASL_SHISHI_ERROR: DEPRECATED.  Will be removed in the future.
 gsasl_randomize: ADD.
 gsasl_md5: ADD.
 gsasl_hmac_md5: ADD.
