--- a/NEWS
+++ b/NEWS
@@ -80,6 +80,8 @@ gsasl_client_step: DEPRECATED: use gsasl_step instead.
 gsasl_server_step: DEPRECATED: use gsasl_step instead.
 gsasl_client_step_base64: DEPRECATED: use gsasl_step64 instead.
 gsasl_server_step_base64: DEPRECATED: use gsasl_step64 instead.
+gsasl_client_finish: DEPRECATED: use gsasl_finish instead.
+gsasl_server_finish: DEPRECATED: use gsasl_finish instead.
 
 * Changes in 0.0.7 (released 2003-06-02)
 
